src/hoc/Modal/Modal.module.scss
@import 'styles/globalMixins.scss';

.Modal {
    overflow-y: auto;
    position: fixed;
    z-index: 500;
    background-color: $background-color;

    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 1);

    box-sizing: border-box;
    transition: all $animation-length-longer ease-out;

    text-align: justify;
    padding: 12px;
    font-size: 100%;

    width: 85%;
    left: 50%;
    margin-left: -42.5%;
    height: 90%;
    top: 50%;
    margin-top: -45vh;

    @media (min-width: $media-breakpoint-1) {
        width: 80%;
        left: 50%;
        margin-left: -40%;
        padding: 16px;
    }
    @media (min-width: $media-breakpoint-2) {
        width: 70%;
        left: 50%;
        margin-left: -35%;
        padding: 18px;
    }
    @media (min-width: $media-breakpoint-3) {
        $width: 700px;
        $height: 700px;
        width: $width;
        height: $height;
        top: 50%;
        left: 50%;
        margin-left: -($width/2);
        margin-top: -($height/2);
    }
}

